@@ -18,7 +18,7 @@
 # This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 # KIND, either express or implied.
 #
-# $Id: libcurl.pc.in,v 1.3 2007-02-17 17:55:19 danf Exp $
+# $Id: libcurl.pc.in,v 1.4 2008-09-02 12:07:08 bagder Exp $
 ###########################################################################
 
 # This should most probably benefit from getting a "Requires:" field added
@@ -28,6 +28,8 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+supported_protocols="@SUPPORT_PROTOCOLS@"
+supported_features="@SUPPORT_FEATURES@"
 
 Name: libcurl
 URL: http://curl.haxx.se/
